@@ -6,25 +6,27 @@ DIST deblob-check-4.1 674781 SHA256 54aa33e23a31ead6f982b830be86003c306b88f0d0a9
 DIST genpatches-4.1-7.base.tar.xz 59032 SHA256 9106e15001e0c286ef929d5e4505507ccdefb0aecdd094b73d57d587070d3288 SHA512 da1e3ef03874ab0fd3af811d6b72e791117dd7490ecbd8698e24e98424175c0ad7228182976fdadbc62a3ef69bf721f82d99cc1760417c4ba3401844fe3c8db4 WHIRLPOOL d3d3623112f118f98db870f48bc3181d6f510fdb4d916a88a832065a2e0df99c1bc5e04db6f7dd09c505f0253b76037965bbaa27103263dd95a713d0428db5ba
 DIST genpatches-4.1-7.experimental.tar.xz 214944 SHA256 1812d9b5cfa6a974cf36bb44a14bec26d021b29d386ce3139b50b99e3175143f SHA512 9704ae5529610afa2d6e62a123cba0a1891a18229a97ad5214449f23cf870e70932acd3a2ce32c5a30bd2cf89a64a012b23ee2591b699120cbffba3cb1cb0509 WHIRLPOOL cad56926d233a7b75dc4e915c1256a10864d356b6124b272f9af7eb59ae77871fd0c58ee810fdaf8d86820fdef1c0670ff7a463142cd7daa9fe9586983fc3fb9
 DIST genpatches-4.1-7.extras.tar.xz 16180 SHA256 39569583e833ff338b8126a52ae46a9a9b335d701006abbca7ed239bb84e7129 SHA512 4a5be5d19474a4679f83135ddfbb9af4b2c2c2d614ae95911c641c4d6fea8de9e25ebc1f4eefc2d9b1976c46b880e8717a0ca6987c64d2ccff969af5d6a84387 WHIRLPOOL 4509fef31139f79d7609e31d37b29f636471ba471c6ab47d6d4fcdd661b9a20d13e292b57a668b40a885a3aad4e2f831a1c3861aafbc3c85dd47f235b0ed09a6
+DIST gentoo-b2-kernel-patches-4.1.3-r1.tar.gz 17364 SHA256 03554f9440ede9a1601c6adfbc4ec6a5d18f016cddac96e2bb120c7f847ed7ff SHA512 b6e5315b2327410fae8a37f300c17a6604a8026cba774667d8f49d36ffb185896dd6235bf2b695d8954b1e8fc3a7fecdd1d69b9df1d6651051c249af2a7dab44 WHIRLPOOL be9ba2a87be4be5b10ede7d5363e18ddedec197773a7c41b7c2ed1cb4fab007c9b2145a9acea2d3bd7d1208181c6b6e4fb506801e1ab4896c929e30dce2bae56
 DIST gentoo-b2-kernel-patches-4.1.3.tar.gz 17379 SHA256 4511097c26d7f16192d8dda8592567137801535f4a7fcd743ebf9969dc2d45ed SHA512 ed0ea76e4dcbdbff664e85fc723c6fdfcaefa6eba565e5477d08aef060f2d14d4f2410108c2048e009836020dafcfbc03e5f870dc8150b6156d32d11d0565366 WHIRLPOOL bbc27775b19883428a6fee117f2bb17931eafa8a11dcfe68bc35c04f81c328f7d3627657628afde1b5a5fc57406cc057e17d6fe626ba66ef4ca595d684e9d97e
 DIST linux-4.1.tar.xz 83017828 SHA256 caf51f085aac1e1cea4d00dbbf3093ead07b551fc07b31b2a989c05f8ea72d9f SHA512 168ef84a4e67619f9f53f3574e438542a5747f9b43443363cb83597fcdac9f40d201625c66e375a23226745eaada9176eb006ca023613cec089349e91751f3c0 WHIRLPOOL 85fcfdb67ea7f865272a85d3b4c3ec1f5a1267f4664bf073c562bb3875e9d96ad68486259d8866a9aced98c95de16840ec531d89745aec75b7315a64ebe650b8
+EBUILD gentoo-b2-sources-4.1.3-r1.ebuild 1283 SHA256 7bf0bd8db81cbaf0b70b3f0c0f9b5b2b90997d6cbb7777074f1ffb1bb1901bd2 SHA512 d5e4c0892dff80566e8997c32dfe3039c700ff5f0effea4885e6645c006479b20b3b4ac5182ca213a0fdf73715753ea6b8a95b43e5749af09ce80c36715c643c WHIRLPOOL cdf41ac69e51a8ab88403f0abe47ea4d7bfc460e8bbeaf792c245ea4746956eff8e815a2a2357fa1d001801d54ccf40f1b62a304fc836e3408545d741ac6a525
 EBUILD gentoo-b2-sources-4.1.3.ebuild 1281 SHA256 2b94edcf1c0bbbbe58d5dd6fb02dcfe9cdbf5cf9167fbb5d5e7405b81d95f522 SHA512 360795a0733ec557fc11f754cb2873577644a5a0637db0b990e883f37669ba3b0e767a27bdadd4eb15cea7555541f6a120c361f06bd5dffe40e1371bd60f1ccb WHIRLPOOL 26992bc7ead1d216326dbfcd7608bfa36f2b3f9832b72c047df2f21e5b58b7d5260944e4bb0ffeefd568e706a9f38cb78f961cfbc6a66588741f86dde06985a8
-MISC ChangeLog 871 SHA256 2995cbafaa3ef584041f2e51ff96772520a83bc618eca990e89510085b47f366 SHA512 db3c4492fde5c2a16b0d5c32aa68c1f4d9289559479a5037603091d72a60febc48cb7b2a92af725cca723413c5103183cf5f8079da03dbaf4deb08cc1f7a152f WHIRLPOOL 35485d0e23c15d00537d06a92562d4c6c02b4ce3a0ef5e97e599d22935fa5d380e760697a9f686f60cd107845f8eeda7ace135f7b0fb02d0220a63fd782d46e0
+MISC ChangeLog 1057 SHA256 5eccaa55a0a406b7aafe2be3a6f249480f44b58283e622a5327a111f0527d812 SHA512 4a425fbd1fbb291aaa54c1b1e43e87fea75c8a1a5245eff0ff8b571ac591c9b9f2400166546e7a8981a04bd5111490fd0e595e6b67e6f13dc9b86125ec42d5e5 WHIRLPOOL 8596dc98c6d7d1678473a8aa788728c8224208c5b7f249138cb45dd413ef0acf7ecd302e61e343b10e21058ba9aafdef112120414f23929bcfe01293b0792f7b
 MISC metadata.xml 791 SHA256 1f659a2b4a3e3d3b16715c76abc7c4a7f056c406e2787e2f9053fae150239859 SHA512 f5e77f85ee6ce465f001cf4756c9d7976122b4895c66c92103eb855d8bf2e918e66102c64317e68599f7c77b737bcf1f4f695d44deaa389ef0926408733725b7 WHIRLPOOL ddf30598116f6e116fc017ce323e25b58c5cfca96d5d58aebd482b6cda86a8993730123947f13b2ef289c538435f3daeb24df6404d302cdb5b0459291dab69a3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVuKMaAAoJEDHIDbLd52zqruEP/i2EPvZgwkImjIDge5B1m1cV
-6h+oCZO4tRjSWLmt0rUh9PcCDNhx/gO+WltQ1wuRBAD/7BzXRaV1LlDeBQ4jrKKO
-JykxSWy5VbTIwvGpJHUEcx3XtTDqEwYFltmTGdKOyL/KeQ8juL3pSL2IiQ8G1c8G
-HlUBz6U96ZGZZ1Pb4/PB+ubHHGQgMNOawk2dEF4LOdqSqpUI2AaUIvfjo5r7XciZ
-m8as49o8knQ948q+3j4utzUFLCccxRKiOz+24wzKSNYHubns/jANRN3hD5L55b4v
-krWMiO/PjPN1PVRLyDGEQZw4zzAC4sIGHntVLkOHgko+D3zPprIfBMNZdCSuhww8
-d/xhDM3D0Dj9UINK54ZuNGWFSkbXgNqLxbnVlzF7nN0jG8OhnPHLs4qqsD9xo9Sx
-EoliEqC9RG21iwsx+SyiIhTa8L22+aMizowzV7a8ApWJ4f5CCCZol8OVHBgHNH6r
-EbU1fBDawZmR7EwiLi0IF3mn6q29KFeOUVfxWgQAE5RY2CITzqYG5dcY7QiDHJ+l
-scqjP6OsuGuTjPGpZ3de7RsFhR9ytkrY9Zg/aOA6rEikY2IvqK0dgYtn2B0tYdP8
-Sfk1pRYyYPo+GDAizfkhRjKozg6ETeyYGfGvVjDpaZXkOWviRM/a/d7NCc/mZ1Ca
-5W96bTu+O6AGgEhGQBrs
-=lfEr
+iQIcBAEBCAAGBQJW2siUAAoJEDHIDbLd52zqoBgP/Rbp1ZxaMVvFhY2ybgZE4zvv
+ZVJOwQXmTuNQJC2GDTIdYae0Hnfmq2aUGgnbTbk47I8yYUDhkYWC69IfJTjCJRzE
+5LdQPPSn0+ffbh6B0/bI2jT+leIFhXQeCvNX6xYbDqlHsIdwewqvtyW3iM2F3Sak
+vZVAlp13zrGe+K8aXIsyJomHTBlZ6N9lMcb6zc1wygBdVqnai7ozwo3tMHh1AIRM
+lL80g+IM57IGmO8lFYUQ8xpmIhMA6mvYrwgbwjkF836GrhHTaM/QUw5AeRhDau9M
+Zo6z7rF1DfsHBCcfzaM0KUYywnAJu3i9KBKnp539D8HC/ShJQsJtyRpbDBmWc2XC
+YzV8YGvfUgvGy06T4XyJ2j3EY6nqvyKD7s/bxZ5/ybr3W74F9a8cDf02vTH42Qey
+AZORWuVIguAmLFgxVbtjgpPb0Aqgdqmxjbo+ZvQH6HK+lVKKruz8p423twqO7i9G
+VnnLAs8ffKkGkLq9wfo67Ke4e0uI331jHvMdZ3Rx3WThlt8ZHrcTnMBxk7vldKu6
+HnU5EsGcd9jy8uwXbjbtRGf1ZwtQTRvZPG2ZBqrwlLG7vav13gBggQWcffs5ibbU
+cdLQHiqykqNIjZuK4ee3NZzOfjU7gOLbGMp/CdLFpplSiLjnREiFhg2i7PBDyJFe
+EiNmFya8w7c/66RTbV+p
+=Z/5p
 -----END PGP SIGNATURE-----
